<resources>
    <string name="app_name">Bullseye</string>
    <string name="start_new_game_button_text">new game</string>
    <string name="show_records_button_text">records</string>
    <string name="exit_the_game_button_text">exit</string>
    <string name="rules">rules</string>
    <string name="score">score</string>
    <string name="round">round</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="ok">Ok</string>
    <string name="game_over">Game Over</string>
    <string name="nice_shot">Nice Shot</string>
</resources>