<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombackground"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guidelines_small" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guidelines_small" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/start_new_game_button_text"
        app:layout_constraintBottom_toTopOf="@+id/records_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_margin_guideline"
        />

    <Button
        android:id="@+id/records_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/show_records_button_text"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintTop_toBottomOf="@+id/new_game_button"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_margin_guideline"
         />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/exit_the_game_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/records_button"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_margin_guideline"
        />


</androidx.constraintlayout.widget.ConstraintLayout>