<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombackground"
    tools:context=".ui.GameActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guidelines_small"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guidelines_small"/>


    <ImageButton
        android:id="@+id/rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/assistant_24"
        android:text="@string/rules"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
        android:backgroundTint="@android:color/holo_blue_dark"/>


    <ImageButton
        android:id="@+id/new_game_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/refresh_icon_24"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="69" />

    <SeekBar
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:value="0"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="100"
        app:labelBehavior="gone"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbRadius="10dp" />

    <Button
        android:id="@+id/hit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hit!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/hit_button" />
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="999"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/score_label" />

    <TextView
        android:id="@+id/round_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/hit_button" />
    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/round_label" />


</androidx.constraintlayout.widget.ConstraintLayout>